--- a/DA/notebooks/classification.ipynb
+++ b/DA/notebooks/classification.ipynb
@@ -28,29 +28,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "d213c00f-cf6b-4163-9c4d-7edfa03ed7a6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/raw_postpro.csv', encoding='cp949')\n",
+    "df = pd.read_csv('../data/raw_postpro.csv')\n",
     "y = df[\"key2\"]\n",
-    "df['key2'] = df['key2'].astype('category')"
+    "# df['key2'] = df['key2'].astype('category')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "1f5d6238-eb85-4b15-b60d-aa8b6acff1d7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "from sklearn import preprocessing\n",
     "le_y = preprocessing.LabelEncoder()\n",
     "y = le_y.fit_transform(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a854227a-e87e-44d7-85d7-905cf6686615",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['COOLER', 'COOLER', 'COOLER', 'COOLER', 'COOLER', 'COOLER',\n",
+       "        'COOLER', 'COOLER', 'COOLER', 'COOLER', 'COOLER', 'COOLER',\n",
+       "        'COOLER', 'PUMP', 'BEARING', 'BEARING', 'BEARING', 'GAUGE',\n",
+       "        'GAUGE', 'GAUGE', 'GAUGE', 'SWITCH', 'SWITCH', 'VALVE', 'GAUGE',\n",
+       "        'GAUGE', 'GAUGE', 'GAUGE', 'GASKET', 'PUMP'], dtype=object),\n",
+       " array([18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 45,  4,  4,  4,\n",
+       "        25, 25, 25, 25, 51, 51, 57, 25, 25, 25, 25, 24, 45]))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['key2'].values[:30], y[:30]"
    ]
   },
   {
@@ -90,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "17f72aa7-b479-40c5-836c-6dbfc50d9133",
    "metadata": {
     "tags": []
@@ -102,7 +132,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 20517 entries, 0 to 20516\n",
-      "Data columns (total 35 columns):\n",
+      "Data columns (total 36 columns):\n",
       " #   Column       Non-Null Count  Dtype   \n",
       "---  ------       --------------  -----   \n",
       " 0   청구서번호        20517 non-null  object  \n",
@@ -116,18 +146,18 @@
       " 8   key1         20517 non-null  object  \n",
       " 9   key2         20517 non-null  category\n",
       " 10  리드타임_음수제거    20517 non-null  int64   \n",
-      " 11  청구량          20517 non-null  int64   \n",
+      " 11  청구량          20517 non-null  float64 \n",
       " 12  견적           20517 non-null  object  \n",
-      " 13  견적수량         20517 non-null  int64   \n",
+      " 13  견적수량         20517 non-null  float64 \n",
       " 14  견적화폐         20517 non-null  object  \n",
-      " 15  견적단가         20517 non-null  int64   \n",
+      " 15  견적단가         20517 non-null  object  \n",
       " 16  발주번호         20517 non-null  object  \n",
       " 17  발주처          20517 non-null  object  \n",
       " 18  발주           20517 non-null  object  \n",
-      " 19  발주수량         20517 non-null  int64   \n",
-      " 20  발주금액         20517 non-null  int64   \n",
+      " 19  발주수량         20517 non-null  float64 \n",
+      " 20  발주금액         20517 non-null  object  \n",
       " 21  D/T          20517 non-null  object  \n",
-      " 22  미입고 기간       20517 non-null  int64   \n",
+      " 22  미입고 기간       20517 non-null  float64 \n",
       " 23  리드타임         20517 non-null  int64   \n",
       " 24  창고입고         20517 non-null  object  \n",
       " 25  창고입고수량       20517 non-null  int64   \n",
@@ -140,8 +170,9 @@
       " 32  선박입고         20517 non-null  object  \n",
       " 33  선박입고수량       20517 non-null  int64   \n",
       " 34  완료 여부        20517 non-null  object  \n",
-      "dtypes: category(1), int64(12), object(22)\n",
-      "memory usage: 5.3+ MB\n"
+      " 35  leadtime     20517 non-null  int64   \n",
+      "dtypes: category(1), float64(4), int64(7), object(24)\n",
+      "memory usage: 5.5+ MB\n"
      ]
     }
    ],
@@ -151,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "04c6bf33-811f-4a3a-b915-0ef020a94b40",
    "metadata": {
     "tags": []
@@ -702,25 +733,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "id": "fa93a5a6-b06e-4dd1-b28b-10951dc72ddd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import preprocessing\n",
     "\n",
     "le_x = preprocessing.LabelEncoder()\n",
-    "# df = df.apply(le.fit_transform)\n",
     "\n",
-    "X = df[['Subject','Machinery', 'Assembly' , \"Part No.1\",\"청구품목\"]]\n",
+    "X = df[['Machinery', 'Assembly' , \"Part No.1\",\"청구품목\"]]\n",
     "X = X.apply(le_x.fit_transform)\n",
     "\n",
     "y = df[\"key2\"]\n",
     "le_y = preprocessing.LabelEncoder()\n",
     "y = le_y.fit_transform(y)\n",
     "\n",
-    "# y_encoded = le_y.fit_transform(y)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=40, shuffle=True, test_size=0.1)"
    ]
   },
@@ -742,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "id": "839cd159",
    "metadata": {
     "tags": []
@@ -769,7 +800,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Subject</th>\n",
        "      <th>Machinery</th>\n",
        "      <th>Assembly</th>\n",
        "      <th>Part No.1</th>\n",
@@ -779,67 +809,61 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>411</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1370</td>\n",
-       "      <td>4741</td>\n",
-       "      <td>5387</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1390</td>\n",
+       "      <td>4821</td>\n",
+       "      <td>5510</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>411</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1370</td>\n",
-       "      <td>5046</td>\n",
-       "      <td>4800</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1390</td>\n",
+       "      <td>5134</td>\n",
+       "      <td>4916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>411</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1370</td>\n",
-       "      <td>5662</td>\n",
-       "      <td>5387</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1390</td>\n",
+       "      <td>5760</td>\n",
+       "      <td>5510</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>1249</td>\n",
-       "      <td>145</td>\n",
-       "      <td>1230</td>\n",
-       "      <td>1671</td>\n",
-       "      <td>1854</td>\n",
+       "      <td>148</td>\n",
+       "      <td>1248</td>\n",
+       "      <td>1703</td>\n",
+       "      <td>1899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>976</td>\n",
-       "      <td>145</td>\n",
-       "      <td>1230</td>\n",
-       "      <td>1671</td>\n",
-       "      <td>1842</td>\n",
+       "      <td>148</td>\n",
+       "      <td>1248</td>\n",
+       "      <td>1703</td>\n",
+       "      <td>1887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>1249</td>\n",
-       "      <td>145</td>\n",
-       "      <td>1230</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>2491</td>\n",
+       "      <td>148</td>\n",
+       "      <td>1248</td>\n",
+       "      <td>1833</td>\n",
+       "      <td>2544</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Subject  Machinery  Assembly  Part No.1  청구품목\n",
-       "15      411         25      1370       4741  5387\n",
-       "16      411         25      1370       5046  4800\n",
-       "17      411         25      1370       5662  5387\n",
-       "18     1249        145      1230       1671  1854\n",
-       "19      976        145      1230       1671  1842\n",
-       "20     1249        145      1230       1800  2491"
+       "    Machinery  Assembly  Part No.1  청구품목\n",
+       "15         26      1390       4821  5510\n",
+       "16         26      1390       5134  4916\n",
+       "17         26      1390       5760  5510\n",
+       "18        148      1248       1703  1899\n",
+       "19        148      1248       1703  1887\n",
+       "20        148      1248       1833  2544"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 26,
    "id": "d65329da",
    "metadata": {
     "tags": []
@@ -859,10 +883,10 @@
     {
      "data": {
       "text/plain": [
-       "array([16, 16, 16, ...,  5, 18, 18])"
+       "array([18, 18, 18, ...,  5, 20, 20], dtype=int64)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "5314d7e1-d92c-487a-a899-2a5d918cf5de",
    "metadata": {
     "tags": []
@@ -898,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "d96fa09a-2e62-48d6-abdf-59dd097be1f1",
    "metadata": {
     "tags": []
@@ -907,10 +931,10 @@
     {
      "data": {
       "text/plain": [
-       "array([20, 33, 45, ..., 40, 50, 57])"
+       "array([26, 45, 57, ..., 40, 50, 57], dtype=int64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "2c3222af-d0b7-424f-9f4b-7e53c9a89c05",
    "metadata": {
     "tags": []
@@ -933,8 +957,8 @@
      "output_type": "stream",
      "text": [
       "{'alpha': 0.1, 'class_prior': None, 'fit_prior': True, 'force_alpha': 'warn', 'min_categories': None}\n",
-      "정확도 :  0.9631389752025833\n",
-      "정확도 :  0.7570662768031189\n"
+      "정확도 :  0.9672894665583537\n",
+      "정확도 :  0.7943469785575049\n"
      ]
     }
    ],
@@ -946,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "8c05ba09-f341-4687-8d62-0e74156745ef",
    "metadata": {
     "tags": []
@@ -955,10 +979,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9631389752025833"
+       "0.9672894665583537"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "23f5c0d3",
    "metadata": {
     "tags": []
@@ -979,8 +1003,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE:  41.45021201930107\n",
-      "F1-score: 0.7604636520475917\n"
+      "MSE:  27.612370229565727\n",
+      "F1-score: 0.7969714317410428\n"
      ]
     }
    ],
@@ -1029,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "688c9e8b",
    "metadata": {
     "tags": []
@@ -1052,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "87aee0d7",
    "metadata": {
     "tags": []
@@ -1076,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "554d1c65",
    "metadata": {
     "tags": []
@@ -1119,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "4995418a-0b13-496e-a1b1-f4be22cac388",
    "metadata": {
     "tags": []
@@ -1132,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "04b2ec06-ae06-4427-b1b5-057612c15dec",
    "metadata": {
     "tags": []
@@ -1144,7 +1168,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "38cff05d-fbad-4b57-be0c-a6b54efda4fb",
    "metadata": {
     "tags": []
@@ -1193,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "id": "f2a821c4",
    "metadata": {
     "tags": []
@@ -1203,7 +1227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8532608695652174\n"
+      "Accuracy: 0.8508771929824561\n"
      ]
     }
    ],
@@ -1228,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 36,
    "id": "12191cd5-9fea-48ac-aa6d-c3c596dad80e",
    "metadata": {
     "tags": []
@@ -1238,7 +1262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1-score: 0.8514914549978977\n"
+      "F1-score: 0.8490884508745208\n"
      ]
     }
    ],
@@ -1822,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "d518e991-488b-4360-93bf-6592fbf916b2",
    "metadata": {
     "tags": []
@@ -1832,15 +1856,15 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Logistic Regression 모델 생성 및 학습\n",
-    "# lr = LogisticRegression(random_state=42, C=7, solver=\"liblinear\", penalty='l1', multi_class=\"ovr\", max_iter=1000)\n",
-    "lr = LogisticRegression(random_state=42, C=14, solver=\"liblinear\", penalty='l1', multi_class= \"ovr\", max_iter=1000,class_weight='balanced')\n",
+    "lr = LogisticRegression(random_state=42, C=7, solver=\"liblinear\", penalty='l1', multi_class=\"ovr\", max_iter=1000)\n",
+    "# lr = LogisticRegression(random_state=42, C=14, solver=\"liblinear\", penalty='l1', multi_class= \"ovr\", max_iter=1000,class_weight='balanced')\n",
     "lr.fit(X_train, y_train)\n",
     "lr_pred = lr.predict(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "id": "e532afc5-3a8c-4f62-ab16-5ed9bc030974",
    "metadata": {
     "tags": []
@@ -1852,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "id": "b57d5f34-498b-4394-814d-404c4502b273",
    "metadata": {
     "tags": []
@@ -1862,10 +1886,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "정확도: 0.9035087719298246\n",
-      "정밀도: 0.9126387544327941\n",
-      "재현율: 0.8758071244631589\n",
-      "1 점수: 0.8863699874063273\n"
+      "정확도: 0.22612085769980506\n",
+      "정밀도: 0.024882225638940377\n",
+      "재현율: 0.0351180510677595\n",
+      "1 점수: 0.025502624496963156\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\workspace\\ShipSupplies\\venv\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
