--- a/DA/notebooks/classification_leadtime.ipynb
+++ b/DA/notebooks/classification_leadtime.ipynb
@@ -786,7 +786,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv1",
+   "display_name": "venv",
    "language": "python",
    "name": "venv"
   },
