--- a/DA/notebooks/reggre.ipynb
+++ b/DA/notebooks/reggre.ipynb
@@ -491,7 +491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv1",
+   "display_name": "venv",
    "language": "python",
    "name": "venv"
   },
