--- a/DA/notebooks/t3.ipynb
+++ b/DA/notebooks/t3.ipynb
@@ -1180,7 +1180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv1",
+   "display_name": "venv",
    "language": "python",
    "name": "venv"
   },
